--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@ body, h1, h2, h3, p, ul {
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     line-height: 1.6;
-    background: #e2e2e2;
+    background: blueviolet;
     padding: 20px;
     color: #333;
 }
